frontend/src/components/skills/Skills.css
.skills__container {
  grid-template-columns: repeat(3, 1fr);
  column-gap: 1.875rem;
  row-gap: 2rem;
}

.skills__card {
  text-align: center;
  padding: 1.875rem;
  border-radius: var(--border-radius);
  background-color: var(--container-color);
  transition: all 0.3s ease-in-out;
  position: relative;
  height: 500px;
}

.skills__card:hover {
  transform: translateY(-10px);
}

.skills__card:nth-child(1) {
  background-color: rgb(108, 108, 229);
  box-shadow: 0 5px 20px 0 rgb(108, 108, 229 / 50%);
}

.skills__card:nth-child(2) {
  background-color: rgb(249, 215, 76);
  box-shadow: 0 5px 20px 0 rgb(249, 215, 76 / 50%);
}

.skills__card:nth-child(3) {
  background-color: rgb(249, 123, 139);
  box-shadow: 0 5px 20px 0 rgb(249, 123, 139 / 50%);
}

.skills__info {
  position: absolute;
  bottom: 20px;
  left: 20px;
  right: 20px;
  box-shadow: 0 0 10px #fff;
  border-radius: 10px;
}

.skills__category,
.skills__level {
  padding: 1rem 1rem;
  font-size: var(--small-font-size);
  color: var(--title-color);
  background-color: var(--container-color);
  width: 100%;
  display: inline-flex;
  align-items: center;
  justify-content: space-between;
  transition: all 0.3s ease-in-out;
}

.skills__category {
  border-bottom-left-radius: 10px;
  border-bottom-right-radius: 10px;
}

.skills__level {
  border-top-left-radius: 10px;
  border-top-right-radius: 10px;
}

.skills__category svg,
.skills__level svg {
  height: 20px;
  width: 20px;
}

.skills__category:hover,
.skills__level:hover {
  color: #fff;
}

.skills__img {
  margin-top: 0.7rem;
  margin-bottom: 1.25rem;
  border-radius: 20px;
  width: 300px;
  height: 200px;
  object-fit: cover;
}

.skills__title {
  font-size: var(--h3-font-size);
  margin-bottom: 1rem;
  color: var(--body-color);
}

.skills__title.add-skill svg {
  height: 200px;
  width: 150px;
  transition: all 0.2s ease-in-out;
  cursor: pointer;
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  color: var(--container-color);
}

.skills__title.add-skill svg:hover {
  transform: translate(-50%, -50%) rotate(180deg);
}

.skills__edit-button {
  position: absolute;
  top: 0.5rem;
  right: 0.5rem;
  cursor: pointer;
  transition: all 0.3s ease-in-out;
  padding: 0.5rem;
  border-radius: 5px;
  display: inline-flex;
  align-items: center;
  justify-content: space-between;
  opacity: 0.8;
  background-color: var(--container-color);
  color: var(--title-color);
  box-shadow: 0 0 10px #fff;
}

.skills__edit-button:hover {
  opacity: 1;
}

.skills__card:nth-child(2) .skills__title {
  color: var(--title-color);
}

.skills__card:nth-child(2) .skills__description {
  color: var(--title-color);
}

[data-theme="dark"] .skills__card:nth-child(2) .skills__title,
[data-theme="dark"] .skills__card:nth-child(2) .skills__description {
  color: var(--body-color);
}

@media screen and (max-width: 1024px) {
  .skills__container {
    grid-template-columns: repeat(2, 330px);
    justify-content: center;
    row-gap: 1.875rem;
  }
}

@media screen and (max-width: 768px) {
  .skills__container {
    grid-template-columns: 310px;
    justify-content: center;
    row-gap: 1.875rem;
  }
}

@media screen and (max-width: 350px) {
  .skills__container {
    grid-template-columns: 1fr;
  }
}

